@@ -48,6 +48,10 @@ None.
 
 2)  COMMENT lines are now allowed in /etc/shorewall/tcpri.
 
+3)  Additional optimization is enabled when OPTIMIZE=2 or
+    OPTIMIZE=3. Chains that contain nothing but rules with ACCEPT
+    targets or that contain a single jump are now optimized away.
+
 ----------------------------------------------------------------------------
                 N E W   F E A T U R E S   I N   4 . 5
 ----------------------------------------------------------------------------
