@@ -10,6 +10,8 @@ Changes in 4.5.1
 
 5)  Allow COMMENTs in tcpri.
 
+6)  More ACCEPT optimization with OPTIMIZE & 2.
+
 Changes in 4.5.0
 
 1)  Allow control over how the Mark is used.
